<resources>

    <string name="app_name">TD1_ASL_Minh_Tuan_VO</string>
    <string name="log">TD 1</string>
    <string name="user_login">Minh Tuan</string>
    <string name="login">Login</string>
    <string name="listactivity">ListActivity</string>
    <string name="textview">TextView</string>
    <string name="achat">Achat</string>
    <string name="voulez_vous_acheter">Voulez-vous acheter ?</string>
    <string name="oui">Oui</string>
    <string name="non">Non</string>
    <string name="todo">TODO</string>
    <string name="quitter">Quitter</string>
    <string name="pr_f_rences">Préférences</string>
    <string name="faire_les_courses">Faire les courses</string>
    <string name="button">Button</string>

</resources>
