<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        />

    <EditText
        android:id="@+id/editTextLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/user_login"
        android:autofillHints="" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="match_parent"
        android:layout_height="109dp"
        android:contentDescription="@string/todo"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/icon" />

    <TimePicker
        android:id="@+id/simpleTimePicker"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:timePickerMode="spinner" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="211dp"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonDisplayCourses"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button"
                android:textAlignment="center"
                android:theme="@style/AppTheme.Button"/>
        </LinearLayout>
        <TextView
            android:id="@+id/displayTextCourses"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textview" />
    </LinearLayout>
    <Button
        android:id="@+id/faireLesCourses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/faire_les_courses"
        />

    <Button
        android:id="@+id/preference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pr_f_rences" />

    <Button
        android:id="@+id/exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quitter"
        />
</LinearLayout>